Fri Jul 18 17:58:58 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.net.mpd:

          Fixed a bug where TARGETDIR was not set if there was no exeout set
          and the project was an executable.

        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/cccommon.mpt:
        * templates/nmake.mpd:
        * templates/vc7.mpd:
        * templates/vc8vb.mpd:
        * templates/wb26wrmakefile.mpd:

          Removed trailing white-space.

Fri Jul 18 17:22:56 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug with the 'output_dirname' template variable.  For
          Windows based project types, the input file used back-slashes and
          taking dirname() of that sort of text on UNIX will not result in
          the expected value.  We must ensure that the text passed to
          dirname() always has forward slashes.

Fri Jul 18 16:03:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:
        * combine_dsw.pl:
        * create_base.pl:
        * prj_install.pl:
        * registry.pl:
        * vs_postclean.pl:
        * devtools/document_template.pl:
        * devtools/highlight_template.pl:
        * generate_export_header.pl:
        * modules/AutomakeProjectCreator.pm:
        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BCB2007ProjectCreator.pm:
        * modules/BCB2007WorkspaceCreator.pm:
        * modules/BDS4ProjectCreator.pm:
        * modules/BDS4WorkspaceCreator.pm:
        * modules/BMakeProjectCreator.pm:
        * modules/BMakeWorkspaceCreator.pm:
        * modules/CCProjectCreator.pm:
        * modules/CCWorkspaceCreator.pm:
        * modules/ConfigParser.pm:
        * modules/Creator.pm:
        * modules/DirectoryManager.pm:
        * modules/Driver.pm:
        * modules/EM3ProjectCreator.pm:
        * modules/EM3WorkspaceCreator.pm:
        * modules/FeatureParser.pm: